[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/lock.png" type="Texture" id=1]
[ext_resource path="res://Assets/element_border.png" type="Texture" id=2]
[ext_resource path="res://Assets/hidden.png" type="Texture" id=3]
[ext_resource path="res://Elements/Lock.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.19235

[sub_resource type="CircleShape2D" id=2]
radius = 6.23677

[sub_resource type="CircleShape2D" id=3]
radius = 5.56275

[node name="Lock" type="Node2D" groups=[
"locks",
]]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="HiddenSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="HorizArea" type="Area2D" parent="." groups=[
"horiz_mobile_areas",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorizArea"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="VertiArea" type="Area2D" parent="." groups=[
"verti_mobile_areas",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VertiArea"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="StatiArea" type="Area2D" parent="." groups=[
"stationary_areas",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StatiArea"]
position = Vector2( 8, 8 )
shape = SubResource( 3 )
